@@ -155,8 +155,9 @@ public class DNConf {
         DFS_BLOCKREPORT_INITIAL_DELAY_DEFAULT) * 1000L;
     if (initBRDelay >= blockReportInterval) {
       initBRDelay = 0;
-      DataNode.LOG.info("dfs.blockreport.initialDelay is greater than " +
-          "dfs.blockreport.intervalMsec." + " Setting initial delay to 0 msec:");
+      DataNode.LOG.info("dfs.blockreport.initialDelay is "
+          + "greater than or equal to" + "dfs.blockreport.intervalMsec."
+          + " Setting initial delay to 0 msec:");
     }
     initialBlockReportDelay = initBRDelay;
     
